[project]
name = "comfyui-ramdom-node"
description = "Shuffle nodes after queue added. [w/Repository name has been changed from comfyui-random-node-39 to comfyui-random-node. Please remove and reinstall it.]"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/shinich39/comfyui-ramdom-node"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "comfyui-ramdom-node"
Icon = ""
