[project]
name = "comfyui-ramdom-node"
description = "Shuffle nodes after queue added."
version = "1.0.0"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/shinich39/comfyui-ramdom-node"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "shinich39"
DisplayName = "comfyui-ramdom-node"
Icon = ""
